[package]
authors = ["JT <jonathan.d.turner@gmail.com>", "The Nushell Project Developers"]
description = "A readline-like crate for CLI text input"
edition = "2021"
license = "MIT"
name = "reedline"
repository = "https://github.com/nushell/reedline"
rust-version = "1.62.1"
version = "0.20.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = true

[dependencies]
chrono = "0.4"
clipboard = { version = "0.5", optional = true }
crossbeam = { version = "0.8", optional = true }
crossterm = { version = "0.26", features = ["serde"] }
fd-lock = "3.0"
itertools = "0.10"
nu-ansi-term = "0.47"
rusqlite = { version = "0.29", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
strip-ansi-escapes = "0.1"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
unicode-segmentation = "1.9"
unicode-width = "0.1"

[dev-dependencies]
gethostname = "0.4"
pretty_assertions = "1.1"
rstest = { version = "0.17", default-features = false }
tempfile = "3.3"

[features]
bashisms = []
external_printer = ["crossbeam"]
sqlite = ["rusqlite/bundled", "serde_json"]
sqlite-dynlib = ["rusqlite", "serde_json"]
system_clipboard = ["clipboard"]
