[package]
authors = ["JT <jonathan.d.turner@gmail.com>", "The Nushell Project Developers"]
description = "A readline-like crate for CLI text input"
edition = "2021"
license = "MIT"
name = "reedline"
repository = "https://github.com/nushell/reedline"
rust-version = "1.62.1"
version = "0.23.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = true

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
clipboard = { version = "0.5.0", optional = true }
crossbeam = { version = "0.8.2", optional = true }
crossterm = { version = "0.27.0", features = ["serde"] }
fd-lock = "3.0.3"
itertools = "0.10.3"
nu-ansi-term = "0.49.0"
rusqlite = { version = "0.29.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }
strip-ansi-escapes = "0.2.0"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0.31"
unicode-segmentation = "1.9.0"
unicode-width = "0.1.9"

[dev-dependencies]
gethostname = "0.4.0"
pretty_assertions = "1.4.0"
rstest = { version = "0.18.0", default-features = false }
tempfile = "3.3.0"

[features]
bashisms = []
external_printer = ["crossbeam"]
sqlite = ["rusqlite/bundled", "serde_json"]
sqlite-dynlib = ["rusqlite", "serde_json"]
system_clipboard = ["clipboard"]
