[package]
authors = ["The Nushell Project Developers"]
description = "A readline-like crate for CLI text input"
edition = "2021"
license = "MIT"
name = "reedline"
repository = "https://github.com/nushell/reedline"
rust-version = "1.63.0"
version = "0.39.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = true

[dependencies]
arboard = { version = "3.3.0", optional = true, default-features = false, features = [
    "wayland-data-control",
] }
chrono = { version = "0.4.19", default-features = false, features = [
    "clock",
    "serde",
] }
crossbeam = { version = "0.8.2", optional = true }
crossterm = { version = "0.28.1", features = ["serde"] }
fd-lock = "4.0.2"
itertools = "0.13.0"
nu-ansi-term = "0.50.0"
rusqlite = { version = "0.31.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }
strip-ansi-escapes = "0.2.0"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.31"
unicode-segmentation = "1.9.0"
unicode-width = "0.1.9"

[dev-dependencies]
gethostname = "0.4.0"
pretty_assertions = "1.4.0"
rstest = { version = "0.23.0", default-features = false }
tempfile = "3.3.0"

[features]
bashisms = []
external_printer = ["crossbeam"]
sqlite = ["rusqlite/bundled", "serde_json"]
sqlite-dynlib = ["rusqlite", "serde_json"]
system_clipboard = ["arboard"]

[[example]]
name = "cwd_aware_hinter"
required-features = ["sqlite"]

[[example]]
name = "external_printer"
required-features = ["external_printer"]

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = false
features = ["bashisms", "external_printer", "sqlite"]
